--- a/analyse/main.ipynb
+++ b/analyse/main.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "id": "61cb06d4",
    "metadata": {},
    "outputs": [],
@@ -188,9 +188,9 @@
     "            WHERE c_score = {score}{where_filter};\n",
     "        \"\"\"\n",
     "        res, error = api_sql_execute(sql)\n",
-    "        labels_array.append(res)\n",
-    "        results_array.append(score)\n",
-    "    return results_array, [row[0]['COUNT(*)'] for row in labels_array]"
+    "        labels_array.append(score)\n",
+    "        results_array.append(res)\n",
+    "    return labels_array, [row[0]['COUNT(*)'] for row in results_array]"
    ]
   },
   {
