--- a/analyse/main.ipynb
+++ b/analyse/main.ipynb
@@ -174,17 +174,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_score(rules):\n",
+    "def get_scores(rules):\n",
     "    labels_array = []\n",
     "    results_array = []\n",
     "    where_clauses = [f\"{k} = '{v}'\" for rule in rules for k, v in rule.items()]\n",
-    "    where_filter = \" AND \" + \" AND \".join(where_clauses) if where_clauses else \"\"\n",
+    "    where_filter = \" AND \" + \" AND \".JOIN(where_clauses) if where_clauses else \"\"\n",
     "    for score in range(1, 6):\n",
     "        sql = f\"\"\"\n",
     "            SELECT COUNT(*) FROM t_output\n",
-    "            join t_input on t_input.c_id = t_output.t_input_id \n",
-    "            join t_model on t_model.c_id = t_output.t_model_id\n",
-    "            join t_category on t_category.c_id = t_input.t_category_id\n",
+    "            JOIN t_input ON t_input.c_id = t_output.t_input_id \n",
+    "            JOIN t_model ON t_model.c_id = t_output.t_model_id\n",
+    "            JOIN t_category ON t_category.c_id = t_input.t_category_id\n",
+    "            WHERE c_score = {score}{where_filter};\n",
+    "        \"\"\"\n",
+    "        res, error = api_sql_execute(sql)\n",
+    "        labels_array.append(score)\n",
+    "        results_array.append(res)\n",
+    "    return labels_array, [row[0]['COUNT(*)'] for row in results_array]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13019b09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_score_averages(rules):\n",
+    "    labels_array = []\n",
+    "    results_array = []\n",
+    "    where_clauses = [f\"{k} = '{v}'\" for rule in rules for k, v in rule.items()]\n",
+    "    where_filter = \" AND \" + \" AND \".JOIN(where_clauses) if where_clauses else \"\"\n",
+    "    for score in range(1, 6):\n",
+    "        sql = f\"\"\"\n",
+    "            SELECT AVG(c_score) FROM t_output\n",
+    "            JOIN t_input ON t_input.c_id = t_output.t_input_id \n",
+    "            JOIN t_model ON t_model.c_id = t_output.t_model_id\n",
+    "            JOIN t_category ON t_category.c_id = t_input.t_category_id\n",
     "            WHERE c_score = {score}{where_filter};\n",
     "        \"\"\"\n",
     "        res, error = api_sql_execute(sql)\n",
@@ -217,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": null,
    "id": "3d2a86bb",
    "metadata": {},
    "outputs": [
@@ -276,7 +302,7 @@
     "for res_model in res_models:\n",
     "    id_model = res_model['c_id']\n",
     "    model = res_model['c_model']\n",
-    "    labels, data = get_score([{'t_model.c_id':id_model}])\n",
+    "    labels, data = get_scores([{'t_model.c_id':id_model}])\n",
     "    show_plot(labels, data, f'\\nModel: {model}')"
    ]
   },
@@ -290,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": null,
    "id": "6702998c",
    "metadata": {},
    "outputs": [
@@ -369,7 +395,7 @@
     "for res_category in res_categories:\n",
     "    id_category = res_category['c_id']\n",
     "    category = res_category['c_category']\n",
-    "    labels, data = get_score([{'t_category.c_id':id_category}])\n",
+    "    labels, data = get_scores([{'t_category.c_id':id_category}])\n",
     "    show_plot(labels, data, f'\\nCategory: {category}')"
    ]
   },
@@ -383,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": null,
    "id": "6f0714bd",
    "metadata": {},
    "outputs": [
@@ -745,7 +771,7 @@
     "    for res_category in res_categories:\n",
     "        id_category = res_category['c_id']\n",
     "        category = res_category['c_category']\n",
-    "        labels, data = get_score([{'t_model.c_id':id_model}, {'t_category.c_id':id_category}])\n",
+    "        labels, data = get_scores([{'t_model.c_id':id_model}, {'t_category.c_id':id_category}])\n",
     "        show_plot(labels, data, f'\\nModel: {model}\\nCategory: {category}')"
    ]
   },
