--- a/analyse/main.ipynb
+++ b/analyse/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 18,
    "id": "1cacb37c",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 19,
    "id": "bf09bc56",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 20,
    "id": "06ab9aa8",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 21,
    "id": "2f0d713c",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 22,
    "id": "942f68d1",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 23,
    "id": "61cb06d4",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 24,
    "id": "13019b09",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 25,
    "id": "38a9609f",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 26,
    "id": "741b1991",
    "metadata": {},
    "outputs": [],
@@ -223,13 +223,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 27,
    "id": "71bb8edd",
    "metadata": {},
    "outputs": [],
    "source": [
     "def show_plot_score(labels, data_scores, data_average, title, dir, file_name):\n",
-    "    ed_dir = f'assets/scores/{dir}'\n",
+    "    ed_dir = f'assets/scores/{dir}' if dir else 'assets/scores'\n",
     "    os.makedirs(ed_dir, exist_ok=True)\n",
     "    total = sum(data_scores)\n",
     "    ed_title = f'Distribution of scores' + title + f\"\\nAverage: {data_average:.2f}\\nTotal Data: {total}\"\n",
@@ -239,13 +239,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 28,
    "id": "ef3352c8",
    "metadata": {},
    "outputs": [],
    "source": [
     "def show_plot_average(x, y, data, title, x_label, dir, file_name):\n",
-    "    ed_dir = f'assets/averages/{dir}'\n",
+    "    ed_dir = f'assets/averages/{dir}' if dir else 'assets/averages'\n",
     "    os.makedirs(ed_dir, exist_ok=True)\n",
     "    labels = [item['label'] for item in data]\n",
     "    data = [item['data'] for item in data]\n",
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 29,
    "id": "3f52ff90",
    "metadata": {},
    "outputs": [],
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 30,
    "id": "3d2a86bb",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
     "    data_average = get_score_average([{'t_model.c_id':id_model}])\n",
     "    show_plot_score(labels, data_scores, data_average, f'\\nModel: {model}', 'model', format_filename(model))\n",
     "    result_average.append({'label': model, 'data': data_average})\n",
-    "show_plot_average(19, 5, result_average, 'Model Score Average', 'Model', 'model', format_filename(model))"
+    "show_plot_average(19, 5, result_average, 'Model Score Average', 'Model', None, 'model_average')"
    ]
   },
   {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 31,
    "id": "6702998c",
    "metadata": {},
    "outputs": [
@@ -458,7 +458,7 @@
     "    data_average = get_score_average([{'t_category.c_id':id_category}])\n",
     "    show_plot_score(labels, data_scores, data_average, f'\\nCategory: {category}', 'category', format_filename(category))\n",
     "    result_average.append({'label': category, 'data': data_average})\n",
-    "show_plot_average(17, 5, result_average, 'Category Score Average', 'Category', 'category', format_filename(category))"
+    "show_plot_average(17, 5, result_average, 'Category Score Average', 'Category', None, 'category_average')"
    ]
   },
   {
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 32,
    "id": "6f0714bd",
    "metadata": {},
    "outputs": [
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 33,
    "id": "a66ae561",
    "metadata": {},
    "outputs": [
@@ -911,12 +911,12 @@
     "        {'label': item['category'], 'data': item['average']}\n",
     "        for item in all_scores if item['model'] == model\n",
     "    ]\n",
-    "    show_plot_average(17, 5, result_average, f'Average Score for Each Category\\nModel: {model}', 'Category', 'model', format_filename(model))"
+    "    show_plot_average(17, 5, result_average, f'Average Score for Each Category\\nModel: {model}', 'Category', 'model_category', format_filename(model))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 34,
    "id": "98ab7617",
    "metadata": {},
    "outputs": [
@@ -998,7 +998,7 @@
     "        {'label': item['model'], 'data': item['average']}\n",
     "        for item in all_scores if item['category'] == category\n",
     "    ]\n",
-    "    show_plot_average(20, 5, result_average, f'Average Score for Each Model\\nCategory: {category}', 'Model', 'category', format_filename(category))"
+    "    show_plot_average(20, 5, result_average, f'Average Score for Each Model\\nCategory: {category}', 'Model', 'category_model', format_filename(category))"
    ]
   }
  ],
